# nono_rent_frontend

./: .gitignore  README.md  playwright.config.js  pyproject.toml  start_server.sh
src/: main.py
templates/: base.html  index.html  leases.html  properties.html  quittances.html  tenants.html
tests/: leases.spec.js  navigation.spec.js  properties.spec.js  quittances.spec.js  rental-pages.spec.js  tenants.spec.js
